依照助教建議更改

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,7 +31,7 @@
 
     <div class="aboutMe">
         <div class="container d-flex jc-space-between ai-center py-160px">
-            <ul class="aboutMe-card d-flex jc-space-between">
+            <ol class="aboutMe-card d-flex jc-space-between">
                 <li>
                     <h3>01</h3>
                     <h3>Attention to Detail</h3>
@@ -52,7 +52,7 @@
                     <h3>Team Player</h3>
                     <p>Collaborates and shares ideas.</p>
                 </li>
-            </ul>
+            </ol>
             <div class="aboutMeText">
                 <h2 class="mb-36px">About Me</h2>
                 <p class="font-style3">With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong understanding of user experience design and accessibility. I'm always learning new technologies and techniques to stay up-to-date in the field.</p>
@@ -82,7 +82,7 @@
                 <div class="project-contentBox">
                     <div class="rowTop d-flex jc-space-between">
                         <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/Rectangle%2015.png?raw=true" alt="計畫的代表圖片2" style="width: 196px;height: 196px;" class="mr-24px">
-                        <div class="project-text">
+                        <div class="project-text d-flex jc-space-between">
                             <p class="font-style4">I've worked on a variety of websites, including e-commerce sites, blogs, and landing pages. I take pride in creating clean, efficient, and user-friendly code.</p>
                             <a href="#" class="btn btn-black d-flex jc-space-between">SEE MORE<img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/arrow_outward-white.png?raw=true" alt="白色的指向箭頭" style="width: 24px;height: 24px;" title="查看更多"></a>
                         </div>
